--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -61,7 +61,7 @@
 
             <ul class="header__nav">
                 <li><a href="{% url 'contact' %}" title="">تماس</a></li>
-                <li><a href="page-about.html" title="">درباره</a></li>
+                <li><a href="{% url 'about' %}" title="">درباره</a></li>
                 <li>
                     <a href="category.html" title="">دسته بندی</a>
                 </li>
@@ -135,7 +135,7 @@
 
                         <div class="item-entry__text">
                             <div class="item-entry__cat">
-                                <a href="category.html">{{ article.category }}</a>
+                                <a href="#">{{ article.category }}</a>
                             </div>
                             <div class="item-entry__cat">
                                 <small>{{ article.author }}</small>
